add repository layer for categories (and complete controller and services)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=blogger-box-backend
+
+spring.datasource.url=jdbc:postgresql://lucky.db.elephantsql.com:5432/negnenwi
+spring.datasource.username=negnenwi
+spring.datasource.password=KwYNmkojgdTCl-hEJf17vAztwznXF1dE
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
